RESOLVED FIXED35748
[Qt] qwebelement.h does not include QtCore headers correctly
https://bugs.webkit.org/show_bug.cgi?id=35748
Summary [Qt] qwebelement.h does not include QtCore headers correctly
Simon Hausmann
Reported 2010-03-04 07:59:49 PST
[Qt] qwebelement.h does not include QtCore headers correctly
Attachments
Patch (1.17 KB, patch)
2010-03-04 08:01 PST, Simon Hausmann
no flags
Simon Hausmann
Comment 1 2010-03-04 08:01:15 PST
WebKit Commit Bot
Comment 2 2010-03-04 11:12:19 PST
Comment on attachment 50024 [details] Patch Clearing flags on attachment: 50024 Committed r55539: <http://trac.webkit.org/changeset/55539>
WebKit Commit Bot
Comment 3 2010-03-04 11:12:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.