2010-03-04  Simon Hausmann  <simon.hausmann@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] qwebelement.h does not include QtCore headers correctly
        https://bugs.webkit.org/show_bug.cgi?id=35748

        The header files of QtCore must be included as QtCore/foo.h.

        See also http://bugreports.qt.nokia.com/browse/QTBUG-8661

        * Api/qwebelement.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@55539 bbb929c8-8fbe-4397-9dbb-9b2b20218538